<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="TODO"/>

    <Button
        android:id="@+id/ButtonRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="182dp"
        android:text="@string/Button_Role" />

    <Button
        android:id="@+id/ButtonCosmetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonRole"
        android:layout_alignRight="@+id/ButtonNeutral"
        android:layout_below="@+id/ButtonInno"
        android:layout_marginTop="24dp"
        android:text="@string/Cosmetic_info" />

    <Button
        android:id="@+id/ButtonNeutral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ButtonRole"
        android:layout_alignTop="@+id/ButtonMafia"
        android:text="@string/Neutral_info" />

    <Button
        android:id="@+id/ButtonKickStarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonCosmetic"
        android:layout_alignRight="@+id/ButtonCosmetic"
        android:layout_below="@+id/ButtonCosmetic"
        android:layout_marginTop="18dp"
        android:text="@string/KickStarter_info" />

    <Button
        android:id="@+id/ButtonMafia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonRole"
        android:layout_centerHorizontal="true"
        android:text="@string/Mafia_info" />

    <Button
        android:id="@+id/ButtonInno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonMafia"
        android:layout_alignBottom="@+id/ButtonMafia"
        android:layout_alignLeft="@+id/ButtonRole"
        android:text="@string/Inno_info" />

</RelativeLayout>